--- a/css/styles.css
+++ b/css/styles.css
@@ -5,15 +5,21 @@
     Description:
         Purpose of the stylesheet follows.
 */
-
 html, body {
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
     font-family: sans-serif;
     font-size: 1em;
 }
 
-h1 {
-    
-    
+
+div#content {
+//    margin-left: 11em;
+//    padding: 1.25em 1.5em 1.5em;
+}
+div#content {
+    line-height: 1.5em;
 }
 
 #firstHeading {
@@ -29,3 +35,20 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
+p {
+    margin: 0.4em 0px 0.5em;
+    line-height: 1.5em;
+}
+#bodyContent {
+    font-size: 0.8em;
+}
+h1, h2, h3, h4, h5, h6 {
+    color: black;
+    background: none repeat scroll 0% 0% transparent;
+    font-weight: normal;
+    margin: 0px;
+    overflow: hidden;
+    padding-top: 0.5em;
+    padding-bottom: 0.17em;
+    border-bottom: 1px solid rgb(170, 170, 170);
+}
