--- a/css/styles.css
+++ b/css/styles.css
@@ -76,5 +76,8 @@ pre b {
     background-color: #007;
     color: #fff;
     display: block;
-    width: auto;
+    min-width: 90px;
+    width: inherit;
+    max-width: 900px;
+    overflow: auto;
 }
